add route cancel rent and cancel transaction
